--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
 		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
-		"@types/jest": "^26.0.24",
-		"@types/node": "^12.20.37",
-		"@types/react": "^17.0.35",
-		"@types/react-dom": "^17.0.11",
-		"node-sass": "^6.0.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.0.2",
-		"react-scripts": "4.0.3",
-		"typescript": "^4.4.4",
+		"@types/jest": "26.0.24",
+		"@types/node": "18.15.3",
+		"@types/react": "18.3.24",
+		"@types/react-dom": "18.3.7",
+		"node-sass": "9.0.0",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"react-router-dom": "7.8.2",
+		"react-scripts": "5.0.1",
+		"typescript": "4.1.6",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
