--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
 	"private": true,
 	"homepage": "https://raptors1711.com/",
 	"dependencies": {
-		"@types/node": "18.15.3",
-		"@types/react": "18.3.24",
-		"@types/react-dom": "18.3.7",
 		"node-sass": "9.0.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
@@ -14,6 +11,11 @@
 		"react-scripts": "5.0.1",
 		"typescript": "4.1.6",
 		"web-vitals": "^1.1.2"
+	},
+	"devDependencies": {
+		"@types/node": "18.15.3",
+		"@types/react": "18.3.24",
+		"@types/react-dom": "18.3.7"
 	},
 	"scripts": {
 		"start": "react-scripts start",
