--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"homepage": "https://raptors1711.com/",
 	"dependencies": {
-		"node-sass": "9.0.0",
+		"sass": "1.92.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-router-dom": "7.8.2",
